fix(components): fix z-index of SwirlConsoleLayout app bar

--- a/packages/swirl-components/src/components/swirl-console-layout/swirl-console-layout.css
+++ b/packages/swirl-components/src/components/swirl-console-layout/swirl-console-layout.css
@@ -110,7 +110,7 @@
 
 .console-layout__app-bar {
   position: sticky;
-  z-index: 1;
+  z-index: var(--s-z-30);
   top: 0;
   display: flex;
   min-width: 0;
